add JWT feature and Salt & Hash Password
