# api/app/controllers.go
@@ -1,4 +1,4 @@
-// Code generated by goagen v1.3.1, DO NOT EDIT.
+// Code generated by goagen v1.4.1, DO NOT EDIT.
 //
 // API "go-rest-security": Application Controllers
 //
@@ -52,8 +52,9 @@ func MountActionController(service *goa.Service, ctrl ActionController) {
 		}
 		return ctrl.GetToken(rctx)
 	}
+	h = handleSecurity("basic_auth", h)
 	service.Mux.Handle("GET", "/gorestsecurity/getToken", ctrl.MuxHandler("getToken", h, nil))
-	service.LogInfo("mount", "ctrl", "Action", "action", "GetToken", "route", "GET /gorestsecurity/getToken")
+	service.LogInfo("mount", "ctrl", "Action", "action", "GetToken", "route", "GET /gorestsecurity/getToken", "security", "basic_auth")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -67,8 +68,9 @@ func MountActionController(service *goa.Service, ctrl ActionController) {
 		}
 		return ctrl.Request(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	service.Mux.Handle("GET", "/gorestsecurity/request", ctrl.MuxHandler("request", h, nil))
-	service.LogInfo("mount", "ctrl", "Action", "action", "Request", "route", "GET /gorestsecurity/request")
+	service.LogInfo("mount", "ctrl", "Action", "action", "Request", "route", "GET /gorestsecurity/request", "security", "jwt")
 }
 
 // SwaggerController is the controller interface for the Swagger actions.
@@ -84,9 +86,10 @@ func MountSwaggerController(service *goa.Service, ctrl SwaggerController) {
 	service.Mux.Handle("OPTIONS", "/swagger.json", ctrl.MuxHandler("preflight", handleSwaggerOrigin(cors.HandlePreflight()), nil))
 
 	h = ctrl.FileHandler("/swagger.json", "api/swagger/swagger.json")
+	h = handleSecurity("basic_auth", h)
 	h = handleSwaggerOrigin(h)
 	service.Mux.Handle("GET", "/swagger.json", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Swagger", "files", "api/swagger/swagger.json", "route", "GET /swagger.json")
+	service.LogInfo("mount", "ctrl", "Swagger", "files", "api/swagger/swagger.json", "route", "GET /swagger.json", "security", "basic_auth")
 }
 
 // handleSwaggerOrigin applies the CORS response headers corresponding to the origin.
