# api/tool/go-rest-security-cli/main.go
@@ -1,49 +1,0 @@
-package main
-
-import (
-	"fmt"
-	goaclient "github.com/goadesign/goa/client"
-	"github.com/mrcaelumn/Go-REST-API-Security/api/client"
-	"github.com/mrcaelumn/Go-REST-API-Security/api/tool/cli"
-	"github.com/spf13/cobra"
-	"net/http"
-	"os"
-	"time"
-)
-
-func main() {
-	// Create command line parser
-	app := &cobra.Command{
-		Use:   "go-rest-security-cli",
-		Short: `CLI client for the go-rest-security service`,
-	}
-
-	// Create client struct
-	httpClient := newHTTPClient()
-	c := client.New(goaclient.HTTPClientDoer(httpClient))
-
-	// Register global flags
-	app.PersistentFlags().StringVarP(&c.Scheme, "scheme", "s", "", "Set the requests scheme")
-	app.PersistentFlags().StringVarP(&c.Host, "host", "H", "", "API hostname")
-	app.PersistentFlags().DurationVarP(&httpClient.Timeout, "timeout", "t", time.Duration(20)*time.Second, "Set the request timeout")
-	app.PersistentFlags().BoolVar(&c.Dump, "dump", false, "Dump HTTP request and response.")
-
-	// Initialize API client
-	c.UserAgent = "go-rest-security-cli/1.0"
-
-	// Register API commands
-	cli.RegisterCommands(app, c)
-
-	// Execute!
-	if err := app.Execute(); err != nil {
-		fmt.Fprintf(os.Stderr, err.Error())
-		os.Exit(-1)
-	}
-}
-
-// newHTTPClient returns the HTTP client used by the API client to make requests to the service.
-func newHTTPClient() *http.Client {
-	// TBD: Change as needed (e.g. to use a different transport to control redirection policy or
-	// disable cert validation or...)
-	return http.DefaultClient
-}
